[package]
name = "burnt-glue"
version = "0.2.2"
edition = "2021"
description = "A library that enables composability and reuse withing CosmWasm contracts."
license = "MIT"
authors = ["Cole Brown"]
documentation = "https://docs.rs/burnt-glue/latest/burnt_glue/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
cosmwasm-std = "1.0"
thiserror = "1.0"
